--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
-    "babel-jest": "^24.9.0"
+    "babel-jest": "^24.9.0",
+    "readline-sync": "^1.4.10"
   }
 }
